--- a/playduck/src/main/webapp/resources/css/buy.css
+++ b/playduck/src/main/webapp/resources/css/buy.css
@@ -123,7 +123,7 @@
 
         /* 전체가격 */
         #Sale_AllPrice{
-            background-color: #ff6801;;
+            background-color: #ff6801;
             color: white;
             font-size: 27px;
             font-weight: 700;
@@ -263,6 +263,7 @@
 
 #reward{
 	width:70px;
+	height: 30px;
 }
 
 .table3_td2{
@@ -271,4 +272,21 @@
 	font-weigth:500;
 	padding: 20px;
 	padding-right:100px;
+}
+
+.table3_td3{
+	border-bottom : 1px solid gray;
+	font-size: 20px;
+	font-weigth:500;
+	padding: 20px;
+	padding-left:100px;
+	 text-align:right;
+}
+
+#rewardbtn{
+	    background-color: #ff6801;
+	    padding: 6px;
+	    border-radius: 5px;
+		font-size: 20px;
+		margin-left:10px;
 }
