--- a/playduck/src/main/webapp/resources/css/buy.css
+++ b/playduck/src/main/webapp/resources/css/buy.css
@@ -152,6 +152,8 @@
             width: 480px;
             height: 28px;
             margin: 5px;
+            text-align: left;
+            padding-left: 10px;
             
         }
 
@@ -187,12 +189,14 @@
             background-color: #ff6801;
             border-radius: 10px;
             text-align: center;
+            color:white;
+             font-size: 25px;
+            font-weight: 700;
         }
 
         .Sale_buytext{
-            font-size: 17px;
-            font-weight: 700;
-
+        
+			color:black;
             margin-top: -8px;
             text-align: center
         }
