--- a/playduck/src/main/webapp/resources/css/pagination.css
+++ b/playduck/src/main/webapp/resources/css/pagination.css
@@ -19,11 +19,11 @@
 .pageBar{
 	display: flex;
 	text-align: center;
-	margin-top: 50px;
 }
 
 .pagination{
-	display: inline-block;
+	display: block;
+	margin-top:50px;
 }
 
 .page-link{
