--- a/playduck/src/main/webapp/resources/css/buy.css
+++ b/playduck/src/main/webapp/resources/css/buy.css
@@ -16,30 +16,33 @@
         font-weight: 700;
         margin-top: 150px;
         margin-bottom: 100px;
+        color : var(--black-color);
     }
 
     /* 리스트 목록 */
    .S_list {
         display: inline-block;
         margin-bottom: 10px;
+        margin-top:10px;
+        vertical-align: middle;
     }
 
     .Sale_list{
+
         margin-top: 50px ;
-        margin-bottom:60px ;
+
 
     }
-.S_list{
-	position: relative;
-}
-    #Sale_img>img{
-        margin-left: 30px;
-      position:absolute;
-      top:30px;
+    .Sale_list2{
+    margin-top: 10px;}
+
+    .Sale_baskimg{
+      margin-left: 30px;
+
     }
 
     #Sale_title{
-      margin-left: 260px;
+      margin-left: 30px;
       padding-top: 10px;
     }
 
@@ -93,7 +96,7 @@
 
         #Sale_price{
             position:absolute;
-            padding-top: 20px;
+            padding-top: 40px;
             padding-left: 250px;
             color: #ff6801;
 			 font-size: 27px;
@@ -251,7 +254,7 @@
 
 /* 전체 합계  */
 .MD_order_text{
-	margin-top :30px;
+	margin-top :100px;
 	padding-top : 40px;
 	width: 800px;
     height: 350px;
@@ -295,7 +298,7 @@
 	    background-color: #ff6801;
 	    padding: 6px;
 	    border-radius: 5px;
-		font-size: 20px;
+		font-size: 14px;
 		margin-left:10px;
 }
 
