--- a/playduck/src/main/webapp/resources/css/MD.css
+++ b/playduck/src/main/webapp/resources/css/MD.css
@@ -221,3 +221,18 @@ section{
 	width: 540px;
     height: 83.8x;
 }
+
+.hr1 {
+	border: 0px;
+	height : 2px;
+	background: white;
+}
+
+.notplay{
+	font-size : 20px;
+	font-weight: 700;
+	width: 700px;
+	text-align: center;
+	margin-top: 20px;
+	
+}
