--- a/playduck/src/main/webapp/resources/css/headerfooter.css
+++ b/playduck/src/main/webapp/resources/css/headerfooter.css
@@ -145,9 +145,11 @@ input:focus {outline:none;}
     padding: 10px 20px 20px 20px;
     overflow-y: initial !important;
     overflow-y: auto;
-    margin-left: auto;
+    margin-left: 20%;
     margin-right: auto;
     border-radius: 30px;
+    position: fixed;
+    
 }
 
 .searchArea{
