--- a/playduck/src/main/webapp/resources/css/login.css
+++ b/playduck/src/main/webapp/resources/css/login.css
@@ -54,9 +54,10 @@ div.modal {
 	padding: 10px 20px 20px 20px;
 	overflow-y: initial !important;
 	overflow-y: auto;
-	margin-left: auto;
+	margin-left: 13%;
 	margin-right: auto;
 	border-radius: 30px;
+	        position: fixed;
 
 }
 
