--- a/playduck/src/main/webapp/resources/css/cu_list.css
+++ b/playduck/src/main/webapp/resources/css/cu_list.css
@@ -60,6 +60,12 @@
 	cursor: pointer;
 	text-align: right;
 	font-size:14px;
+	float:right;
+}
+
+.lsit_total, .list_sort{
+	display: inline-block;
+	margin-top: 30px;
 }
 
 /* 검정색 전체 배경 */
@@ -113,4 +119,27 @@
     margin-top: 15px;
     font-size: 24px;
     font-weight: bolder;
+}
+
+.cu_searchArea{
+	float:right;
+	position: absolute;
+	right:0 
+
+}
+
+.cu_searchBtn {
+	cursor:pointer;
+	background-color: var(--main-color);
+	color: white;
+    font-size: 17px;
+    font-weight: 400;
+    text-align: center;
+    border-radius: 5px;
+	width : 50px;
+	height : 24px;
+}
+.cu_searchInput {
+	height : 24px;
+	width : 170px;
 }
