--- a/playduck/src/main/webapp/resources/css/list.css
+++ b/playduck/src/main/webapp/resources/css/list.css
@@ -83,7 +83,7 @@
 /* 흰색 안쪽 배경 */
 .madal_listSortDiv {
     width: 800px;
-    height: 200px;
+    height: 360px;
     background: var(--black-color);
     margin-top: 100px;
     padding: 10px 20px 20px 20px;
@@ -190,3 +190,15 @@
  	margin-top: 20px;
  	margin-bottom: 20px;
  }
+ 
+ .list_sort{
+	cursor: pointer;
+	text-align: right;
+	font-size:14px;
+	float:right;
+}
+
+.lsit_total, .list_sort{
+	display: inline-block;
+
+}
